--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://<db_username>:db:password@cluster0.5j7dr.mongodb.net
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET = use-yours
+ACCESS_TOKEN_EXPIRY = 1d
+
+REFRESH_TOKEN_SECRET = use-yoursss
+REFRESH_TOKEN_EXPIRY = 10d
